; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/extr_ff_ffplay.c_ffp_global_init.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/extr_ff_ffplay.c_ffp_global_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@g_ffmpeg_global_inited = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"ijkmediaplayer version : %s\00", align 1
@lockmgr = common dso_local global i32 0, align 4
@ffp_log_callback_brief = common dso_local global i32 0, align 4
@flush_pkt = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ffp_global_init() #0 {
  %1 = load i32, i32* @g_ffmpeg_global_inited, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %16

4:                                                ; preds = %0
  %5 = call i32 (...) @ijkmp_version()
  %6 = call i32 @ALOGD(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = call i32 (...) @avcodec_register_all()
  %8 = call i32 (...) @av_register_all()
  %9 = call i32 (...) @ijkav_register_all()
  %10 = call i32 (...) @avformat_network_init()
  %11 = load i32, i32* @lockmgr, align 4
  %12 = call i32 @av_lockmgr_register(i32 %11)
  %13 = load i32, i32* @ffp_log_callback_brief, align 4
  %14 = call i32 @av_log_set_callback(i32 %13)
  %15 = call i32 @av_init_packet(%struct.TYPE_3__* @flush_pkt)
  store i32* bitcast (%struct.TYPE_3__* @flush_pkt to i32*), i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @flush_pkt, i32 0, i32 0), align 8
  store i32 1, i32* @g_ffmpeg_global_inited, align 4
  br label %16

16:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @ALOGD(i8*, i32) #1

declare dso_local i32 @ijkmp_version(...) #1

declare dso_local i32 @avcodec_register_all(...) #1

declare dso_local i32 @av_register_all(...) #1

declare dso_local i32 @ijkav_register_all(...) #1

declare dso_local i32 @avformat_network_init(...) #1

declare dso_local i32 @av_lockmgr_register(i32) #1

declare dso_local i32 @av_log_set_callback(i32) #1

declare dso_local i32 @av_init_packet(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
